--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   rounded_loading_button: ^2.0.9
   otp_text_field: ^1.1.2
   animated_bottom_navigation_bar: ^0.3.2
+  country_code_picker: ^2.0.2
 
 
 dev_dependencies:
