--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   otp_text_field: ^1.1.2
   animated_bottom_navigation_bar: ^0.3.2
   country_code_picker: ^2.0.2
+  device_preview: ^1.0.0
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
