--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -39,7 +39,7 @@ flutter_native_splash:
   # parameters from above. If the image_dark parameter is specified, color_dark or
   # background_image_dark must be specified.  color_dark and background_image_dark cannot both be
   # set.
-  #color_dark: "#042a49"
+  color_dark: "#1b1b1b"
   #background_image_dark: "assets/dark-background.png"
   #image_dark: assets/splash-invert.png
 
@@ -75,9 +75,9 @@ flutter_native_splash:
   #       SystemChrome.setEnabledSystemUIOverlays([SystemUiOverlay.bottom, SystemUiOverlay.top]);
 #  fullscreen: true
 
-  # If you have changed the name(s) of your info.plist file(s), you can specify the filename(s)
-  # with the info_plist_files parameter.  Remove only the # characters in the three lines below,
-  # do not remove any spaces:
-  #info_plist_files:
-  #  - 'ios/Runner/Info-Debug.plist'
-  #  - 'ios/Runner/Info-Release.plist'
+# If you have changed the name(s) of your info.plist file(s), you can specify the filename(s)
+# with the info_plist_files parameter.  Remove only the # characters in the three lines below,
+# do not remove any spaces:
+#info_plist_files:
+#  - 'ios/Runner/Info-Debug.plist'
+#  - 'ios/Runner/Info-Release.plist'
