--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,13 @@ dependencies:
   country_code_picker: ^2.0.2
   device_preview: ^1.0.0
   flutter_rating_bar: ^4.0.0
+  get: ^4.6.1
+  get_storage: ^2.0.3
+  date_picker_timeline: ^1.2.3
+  intl: ^0.17.0
+  sqflite: ^2.0.2
+  flutter_staggered_animations: ^1.0.0
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
