--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   google_fonts: ^2.3.1
   introduction_screen: ^3.0.0
   rounded_loading_button: ^2.0.9
-  otp_text_field: ^1.1.2
+  
   animated_bottom_navigation_bar: ^0.3.2
   country_code_picker: ^2.0.2
   device_preview: ^1.0.0
@@ -49,6 +49,11 @@ dependencies:
   sqflite: ^2.0.2
   flutter_staggered_animations: ^1.0.0
   logger: ^1.1.0
+  path_provider: ^2.0.9
+  firebase_core: ^1.13.1
+  firebase_auth: ^3.3.10
+  sms_autofill: ^2.2.0
+  flutter_otp_text_field: ^1.0.0
 
 dev_dependencies:
   flutter_test:
