--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   path_provider: ^2.0.9
   firebase_core: ^1.13.1
   firebase_auth: ^3.3.10
+  firestore_ui: ^1.22.0
+  firebase_database: ^9.0.8
   sms_autofill: ^2.2.0
   flutter_otp_text_field: ^1.0.0
 
