--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   firebase_database: ^9.0.8
   sms_autofill: ^2.2.0
   flutter_otp_text_field: ^1.0.0
+  cached_network_image: ^3.2.0
+  cloud_firestore: ^3.1.10
 
 dev_dependencies:
   flutter_test:
