--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,7 +70,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation platform('com.google.firebase:firebase-bom:29.2.0')
     implementation "androidx.browser:browser:1.4.0"
-
-
+    implementation 'com.android.support:multidex:2.0.1'
 
 }
