--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.netmobile.netlyfe">
    <application
         android:label="netlyfe"
+         android:name="androidx.multidex.MultiDexApplication" >
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
