--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,7 +49,7 @@ android {
         targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        multiDexEnabled true
+        multiDexEnabled = true
     }
 
     buildTypes {
@@ -70,6 +70,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation platform('com.google.firebase:firebase-bom:29.2.0')
     implementation "androidx.browser:browser:1.4.0"
-    implementation 'com.android.support:multidex:2.0.1'
+    implementation("androidx.multidex:multidex:2.0.1")
+
 
 }
