--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,11 @@ dependencies:
   flutter_otp_text_field: ^1.0.0
   cached_network_image: ^3.2.0
   cloud_firestore: ^3.1.10
+  dotted_border: ^2.0.0+2
+  image_picker: ^0.8.5
+  firebase_storage: ^10.2.12
+  carousel_slider: ^4.0.0
+  smooth_page_indicator: ^1.0.0+2
 
 dev_dependencies:
   flutter_test:
